2001-10-06 15:28 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
  ! source/rdd/dbfntx/dbfntx1.c
    ! Few fixes

2001-10-05 23:12 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
  ! source/rdd/dbf1.c
    ! hb_dbfRecall() fixed

2001-10-04 17:10 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * doc/gmake.txt
  * source/rtl/filesys.c
  * source/rtl/idle.c
  	! Cygwin fixes.

2001-10-03 17:30 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * source/rtl/isprint.c
    - The Windows version doesn't work with RSXNT,
      due to link time errors, so exclude __RSXNT__
      from the HB_OS_WIN_32 branches.

2001-09-30 17:20 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
   *source/rtl/filesys.c
     * Some minor changes to the Win32 section(Verify the return code of the function
       before make the call to GetLastError())

2001-09-30 08:20 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
   *contrib/hbzlib/zipnew.cpp
   contrib/hbzlib/zipcomp.cpp
   contrib/hbzlib/zip.c
   contrib/hbzlib/hbzip2.h
     * Added an second code block to all Compress/extraction function
     * Added some guard com specific platform
   *contrib/hbzlib/doc/zipnew.txt
     * Updated the docs to reflect the library changes

2001-09-27 14:33 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * source/rtl/memofile.c
     ! MEMOWRIT() - Restored CA-Cl*pper compatibility.

   * source/rtl/dbedit.prg
     ! DBEDIT() - Restored CA-Cl*pper compatibility.

   * source/rtl/tbrowse.prg
     ! Fixed AutoLite/Hilite/DeHilite() support. Now DBEDIT() works 
       as expected.

2001-09-27 01:52 GMT-3 Horacio Roldan <harbour_ar@yahoo.com.ar>
  * source/rtl/memofile.c
    * Fixed: MemoWrit added an EOF (0x1A) everytime 
      (under Windows), Reported by Brian Hays.
    * Fixed: MemoRead didn't strip the EOF char
      (under Windows).

2001-09-26 18:38 GMT-3 Horacio Roldan <harbour_ar@yahoo.com.ar>
  * source/rtl/dbedit.prg
    * Fixed no-hilighting problem, sent by Wilson Velazquez      
